--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    background-color: white;
+}
+
 .shadow {
     text-shadow: 2px 2px 3px #800000;
 }
@@ -9,6 +19,16 @@ a:focus, a:hover {
 body {
     font-family: sans-serif;
     font-size: 100%;
+    width: 600px;
+    margin: 0, auto, 0, auto;
+    border: 3px solid #931420;
+    background-color: #fffded;
+}
+
+header {
+    border-bottom: 3px solid #931420;
+    padding: 1.5em 0 2em 0;
+    background-image: linear-gradient(#f6bb73, white);
 }
 
 header h2 {
@@ -25,25 +45,59 @@ header h3 {
 
 header img {
     float: left;
+    padding: 0, 1em;
 }
 
 main {
     clear: left;
+    padding: 0, 1em;
 }
 
 main h1 {
     font-size: 150%;
+    padding: .3em, 0;
+    border-top: 3px solid #931420;
+    border-bottom: 3px solid #931420;
 }
 
 main h2 {
     font-size: 130%;
     color: #800000;
+    padding: .5em, 0, .25em, 0;
 }
 
 main h3 {
     font-size: 105%;
+    padding-bottom: .25em;
+}
+
+main img {
+    padding-bottom: 1em;
+}
+
+main p {
+    padding-bottom: .5em;
+}
+
+main blockquote {
+    padding: 0, 2em;
+    font-style: italic;
+}
+
+main ul {
+    padding: 0, 0, .25em, 1.25em;
+}
+
+main li {
+    padding-bottom: .35em;
+}
+
+footer {
+    background-color: #931420;
 }
 
 footer p {
     text-align: center;
+    color: white;
+    padding: 1em, 0;
 }
